--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,7 +1,7 @@
-server.port=80
+server.port=${PORT}
 
 # DataBase
 
-spring.datasource.url = jdbc:postgresql://localhost:5433/zehut-market
-spring.datasource.username = postgres
-spring.datasource.password = Zehut7527
+spring.datasource.url=${SPRING_DATA_SOURCE_URL}
+spring.datasource.username=${SPRING_DATA_SOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATA_SOURCE_PASSWORD}
